rock paper scissors working with basic UI

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <div>
-        <h1>Rock, Paper, Scissors!</h1>
+    <h3>Rock, paper, scissors. Best of 5!</h3>
+    <h4 id ='game-number'></h4>
+    <div id = 'container'>        
         <button class = 'btn' id = "rock">Rock</button>
         <button class = 'btn' id = "paper">Paper</button>
         <button class = 'btn' id = "scissors">Scissors</button>
     </div>
     <div id = 'results'>
+        <p id = 'winner'></p>
         <h3>Score</h3>
         <div id = 'score'>
             <p>Player: </p>
